; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-logging.c_obs_ffmpeg_load_logging.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-logging.c_obs_ffmpeg_load_logging.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@active_log_contexts = common dso_local global i32 0, align 4
@cached_log_contexts = common dso_local global i32 0, align 4
@log_contexts_mutex = common dso_local global i32 0, align 4
@ffmpeg_log_callback = common dso_local global i32 0, align 4
@logging_initialized = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_ffmpeg_load_logging() #0 {
  %1 = load i32, i32* @active_log_contexts, align 4
  %2 = call i32 @da_init(i32 %1)
  %3 = load i32, i32* @cached_log_contexts, align 4
  %4 = call i32 @da_init(i32 %3)
  %5 = call i64 @pthread_mutex_init(i32* @log_contexts_mutex, i32* null)
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i32, i32* @ffmpeg_log_callback, align 4
  %9 = call i32 @av_log_set_callback(i32 %8)
  store i32 1, i32* @logging_initialized, align 4
  br label %10

10:                                               ; preds = %7, %0
  ret void
}

declare dso_local i32 @da_init(i32) #1

declare dso_local i64 @pthread_mutex_init(i32*, i32*) #1

declare dso_local i32 @av_log_set_callback(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
